web/book/tests/documentation/snapshots/documentation__book__transforms__from__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\n"
---
SELECT
  *
FROM
  employees

