web/book/tests/documentation/snapshots/documentation__book__transforms__from__examples__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from e = employees\nselect e.first_name\n"
---
SELECT
  first_name
FROM
  employees AS e

